[project]
name = "tokenmeter"
version = "0.1.0"
description = "Track, budget, and understand the cost of your AI API calls"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Small Dream Collective" }
]
keywords = ["ai", "llm", "cost", "tokens", "budget", "openai", "anthropic", "claude", "gpt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = []

[project.scripts]
tokenmeter = "tokenmeter.cli:cli"

[project.optional-dependencies]
cli = ["click>=8.1.0"]
openai = ["tiktoken>=0.7.0"]
anthropic = ["anthropic>=0.40.0"]
all = ["click>=8.1.0", "tiktoken>=0.7.0", "anthropic>=0.40.0"]
dev = [
    "click>=8.1.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
